test/data/semantic/bad/if_scrutinee_type_mismatch.coy
fn main() -> () {
    let x = 1;

    if x {
        ()
    } else {
        ()
    }
}
